[gd_scene load_steps=22 format=3 uid="uid://cc5vhjwpv2vp7"]

[ext_resource type="Texture2D" uid="uid://c2daxdla2ecm7" path="res://AssetBundle/Sprites/Slimer.png" id="1_jokqx"]
[ext_resource type="Script" uid="uid://jbhwlbmd3ger" path="res://Scripts/enemy.gd" id="1_swwnm"]
[ext_resource type="Texture2D" uid="uid://wprj2mnfqfc1" path="res://AssetBundle/Sprites/SlimerDeath.png" id="2_aiwxb"]
[ext_resource type="AudioStream" uid="uid://dosj6up3ftoxj" path="res://AssetBundle/Audio/EnemyDeath.mp3" id="4_paq7w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y26kt"]
atlas = ExtResource("2_aiwxb")
region = Rect2(0, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7ij5"]
atlas = ExtResource("2_aiwxb")
region = Rect2(64, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_psnrq"]
atlas = ExtResource("2_aiwxb")
region = Rect2(128, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh8cv"]
atlas = ExtResource("2_aiwxb")
region = Rect2(192, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_555id"]
atlas = ExtResource("2_aiwxb")
region = Rect2(256, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq7bh"]
atlas = ExtResource("2_aiwxb")
region = Rect2(320, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_10642"]
atlas = ExtResource("2_aiwxb")
region = Rect2(384, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_swwnm"]
atlas = ExtResource("1_jokqx")
region = Rect2(0, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiwxb"]
atlas = ExtResource("1_jokqx")
region = Rect2(41, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_paq7w"]
atlas = ExtResource("1_jokqx")
region = Rect2(82, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4si1"]
atlas = ExtResource("1_jokqx")
region = Rect2(123, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gljc"]
atlas = ExtResource("1_jokqx")
region = Rect2(164, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblni"]
atlas = ExtResource("1_jokqx")
region = Rect2(205, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_e388w"]
atlas = ExtResource("1_jokqx")
region = Rect2(246, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4o34"]
atlas = ExtResource("1_jokqx")
region = Rect2(287, 0, 41, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_y26kt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y26kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7ij5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psnrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh8cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_555id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq7bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10642")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swwnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiwxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_paq7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4si1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gljc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e388w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4o34")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_c7ij5"]

[node name="Slime" type="Area2D"]
script = ExtResource("1_swwnm")
slime_speed = -50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y26kt")
animation = &"death"
autoplay = "idle"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c7ij5")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_paq7w")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
